<resources>
    <string name="app_name">UTA Mobile Vending System</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_home_screen">User Home Screen</string>
    <string name="title_activity_manager_home_screen">Manager Home Screen</string>
    <string name="title_activity_vendor_home_screen">Operator Home Screen</string>
    <string name="please_enter_new_password">Please Enter New Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="change">Change</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="click_here_to_register_if_new_user">Click Here To Register If New User</string>
    <string name="status">STATUS:</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="total">Total</string>
    <string name="food_item">Food Item</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
</resources>
