<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".OrderConfirmation">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:id="@+id/tableLayout4"
        android:layout_width="400dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/food_item"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="40dp"
                android:text="@string/quantity"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_marginLeft="10dp"
                android:text="@string/price"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

        </TableRow>


        <TableRow android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/drinks"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/drinksQty"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="40dp"
                android:text="0"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/drinksPrice"
                android:layout_width="101dp"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

        </TableRow>


        <TableRow android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/sandwiches"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/swichQty"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="40dp"
                android:text="0"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/swichPrice"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

        </TableRow>

        <TableRow android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/snacks"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/snacksQty"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="40dp"
                android:text="0"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/snacksPrice"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

        </TableRow>

        <TableRow android:layout_marginTop="70dp">

            <TextView
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginLeft="40dp"
                android:text="@string/total"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_marginLeft="10dp"
                android:text=" "
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="25dp" />

        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="159dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="81dp"
        android:text="@string/status"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/confirmed"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>