<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeScreens.OperatorHomeScreen"
    tools:showIn="@layout/activity_vendor_home_screen">

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobET" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    <EditText
        android:id="@+id/addressET"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <EditText
        android:id="@+id/cityET"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressET" />

    <EditText
        android:id="@+id/stateET"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityET" />

    <EditText
        android:id="@+id/zipET"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateET" />

    <TextView
        android:id="@+id/zipTV"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="30dp"
        android:text="@string/zip"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateTV" />

    <TextView
        android:id="@+id/stateTV"
        android:layout_width="87dp"
        android:layout_height="32dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="30dp"
        android:text="@string/state"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTV" />

    <TextView
        android:id="@+id/addressTV"
        android:layout_width="87dp"
        android:layout_height="33dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="30dp"
        android:text="@string/address"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTV" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTV" />

    <TextView
        android:id="@+id/userNameTV"
        android:layout_width="238dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome," />

    <TextView
        android:id="@+id/cityTV"
        android:layout_width="87dp"
        android:layout_height="36dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="30dp"
        android:text="@string/city"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTV" />

    <TextView
        android:id="@+id/fNameTV"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameTV" />

    <TextView
        android:id="@+id/lNameTV"
        android:layout_width="170dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameTV" />

    <TextView
        android:id="@+id/dobTV"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="D.O.B"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lNameTV" />

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="86dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="Phone"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dobTV" />

    <EditText
        android:id="@+id/dobET"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="Update"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipET" />


</androidx.constraintlayout.widget.ConstraintLayout>